tests/negative/test_import_cycle.orb
import "tests/negative/_cycle_back.orb";

fnc main() {}